# bsc

./: Cargo.toml  README.md
bsc_modules/tmp/: .gitignore  CMakeLists.txt  README.md  dependencies.bscxx
bsc_modules/tmp/include/: test.h
bsc_modules/tmp/include/core/: generator.h
bsc_modules/tmp/src/: CMakeLists.txt  main.cc
bsc_modules/tmp/src/core/: generator.cc
bsc_modules/tmp/test/: CMakeLists.txt
src/: add.rs  common.rs  create.rs  delete.rs  dependencies_handler.rs  main.rs
